[gd_scene load_steps=2 format=3 uid="uid://bu0a3pu5ddgwm"]

[ext_resource type="Script" path="res://src/gui/hand/hand.gd" id="1_j7nri"]

[node name="Hand" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j7nri")

[node name="VBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LeftButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Left"

[node name="AcceptButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Place"

[node name="RightButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Right"

[node name="Pieces" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/HBoxContainer/LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/AcceptButton" to="." method="_on_accept_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/RightButton" to="." method="_on_right_button_pressed"]
